--- a/style.css
+++ b/style.css
@@ -6,32 +6,37 @@ form{
      width:310px; 
      text-align: center;
 }
+#main{
+    margin-top: 40px;
+}
 h1{
     text-align: center;
     margin-left: 15px;    
 }
 input{
     margin:0 auto;
-    width: 140px;
     display: flex;
+    width: 170px;
+
+
 }
 .file{
     width: 300px;
     height: 300px;
-    border-radius: 10px;
+    border-radius: 20px;
     text-align: center;
 }
 .login{
-    color:green;
+    color:greenyellow;
     margin-right: 140px;
 } 
 .password{
-    color:green;
+    color:greenyellow;
     margin-right: 111px;
 }
 button{
     padding: auto;
 }
 label:hover {
-    color:rgb(233, 229, 10);
+    color:rgb(18, 184, 235);
 }
